[gd_scene load_steps=16 format=3 uid="uid://c5friqigqdh4k"]

[ext_resource type="PackedScene" uid="uid://dipn6t27p0nap" path="res://demo/assets/scenes/PrimitivesCity.tscn" id="2"]
[ext_resource type="Script" uid="uid://deo0gxkmk2ahd" path="res://addons/sky_3d/src/Sky3D.gd" id="2_cejat"]
[ext_resource type="Script" uid="uid://cjmkcj8hwm7ts" path="res://addons/sky_3d/src/TimeOfDay.gd" id="3"]
[ext_resource type="Script" uid="uid://b4tkplvh7fq40" path="res://addons/sky_3d/src/Skydome.gd" id="4"]
[ext_resource type="Shader" uid="uid://cvd0x7lon1ur6" path="res://addons/sky_3d/shaders/SkyMaterial.gdshader" id="4_v8wrf"]
[ext_resource type="Texture2D" uid="uid://c1vwcdcdvb74a" path="res://addons/sky_3d/assets/thirdparty/textures/milkyway/Milkyway.jpg" id="5_0j4pb"]
[ext_resource type="Texture2D" uid="uid://cecwdqjol0ckd" path="res://addons/sky_3d/assets/textures/noiseClouds.png" id="5_rt0jr"]
[ext_resource type="Texture2D" uid="uid://cfqk60lpl5ljv" path="res://addons/sky_3d/assets/resources/SNoise.tres" id="6_1g8sw"]
[ext_resource type="Texture2D" uid="uid://2r8ylu6rg5dp" path="res://addons/sky_3d/assets/thirdparty/textures/moon/MoonMap.png" id="6_v8wrf"]
[ext_resource type="Texture2D" uid="uid://djpfuyxkryegn" path="res://addons/sky_3d/assets/textures/noise.jpg" id="7_d0ed4"]
[ext_resource type="Texture2D" uid="uid://bm7dot7t7u1q4" path="res://addons/sky_3d/assets/thirdparty/textures/milkyway/StarField.jpg" id="8_humls"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v8wrf"]
shader = ExtResource("4_v8wrf")
shader_parameter/_color_correction_params = Vector2(0.889, 1.45519e-11)
shader_parameter/_ground_color = Color(0.3, 0.3, 0.3, 1)
shader_parameter/_horizon_level = 0.0
shader_parameter/_moon_size = 0.07
shader_parameter/_moon_matrix = Basis(1.49012e-08, -0.942621, 0.333865, -0.547824, 0.279309, 0.78859, -0.836593, -0.182899, -0.516391)
shader_parameter/_deep_space_matrix = Basis(0.707557, 0.706656, 0, 0.194781, -0.19503, -0.961261, -0.679281, 0.680148, -0.275638)
shader_parameter/_atm_darkness = 0.5
shader_parameter/_atm_sun_intensity = 18.0
shader_parameter/_atm_day_tint = Color(0.807843, 0.909804, 1, 1)
shader_parameter/_atm_horizon_light_tint = Color(0.980392, 0.635294, 0.462745, 1)
shader_parameter/_atm_night_tint = Color(0, 0, 0, 0)
shader_parameter/_atm_level_params = Vector3(1, 0, 0)
shader_parameter/_atm_thickness = 0.7
shader_parameter/_atm_sun_mie_tint = Color(1, 1, 1, 1)
shader_parameter/_atm_sun_mie_intensity = 1.0
shader_parameter/_atm_moon_mie_tint = Color(0.137255, 0.184314, 0.292196, 1)
shader_parameter/_atm_moon_mie_intensity = 0.0
shader_parameter/_atm_beta_ray = Vector3(5.80454e-06, 1.35629e-05, 3.31126e-05)
shader_parameter/_atm_beta_mie = Vector3(3.038e-08, 3.038e-08, 3.038e-08)
shader_parameter/_atm_sun_partial_mie_phase = Vector3(0.36, 1.64, 1.6)
shader_parameter/_atm_moon_partial_mie_phase = Vector3(0.36, 1.64, 1.6)
shader_parameter/_sun_disk_color = Color(0.996094, 0.541334, 0.140076, 1)
shader_parameter/_sun_disk_intensity = 2.0
shader_parameter/_sun_disk_size = 0.015
shader_parameter/_moon_color = Color(1, 1, 1, 1)
shader_parameter/_moon_texture = ExtResource("6_v8wrf")
shader_parameter/_background_texture = ExtResource("5_0j4pb")
shader_parameter/_background_color = Color(0.709804, 0.709804, 0.709804, 0.854902)
shader_parameter/_stars_field_color = Color(1, 1, 1, 1)
shader_parameter/_stars_field_texture = ExtResource("8_humls")
shader_parameter/_stars_scintillation = 0.75
shader_parameter/_stars_scintillation_speed = 0.01
shader_parameter/_noise_tex = ExtResource("7_d0ed4")
shader_parameter/_clouds_coverage = 0.5
shader_parameter/_clouds_thickness = 1.7
shader_parameter/_clouds_absorption = 2.0
shader_parameter/_clouds_sky_tint_fade = 0.5
shader_parameter/_clouds_intensity = 10.0
shader_parameter/_clouds_size = 2.0
shader_parameter/_clouds_uv = Vector2(0.16, 0.11)
shader_parameter/_clouds_speed = 0.07
shader_parameter/_clouds_direction = Vector2(0.25, 0.25)
shader_parameter/_clouds_day_color = Color(0.823529, 0.87451, 1, 1)
shader_parameter/_clouds_horizon_light_color = Color(0.98, 0.43, 0.15, 1)
shader_parameter/_clouds_night_color = Color(0.090196, 0.094118, 0.129412, 1)
shader_parameter/_clouds_texture = ExtResource("6_1g8sw")
shader_parameter/_cumulus_clouds_coverage = 0.55
shader_parameter/_cumulus_clouds_thickness = 0.0243
shader_parameter/_cumulus_clouds_absorption = 2.0
shader_parameter/_cumulus_clouds_noise_freq = 2.7
shader_parameter/_cumulus_clouds_sky_tint_fade = 0.0
shader_parameter/_cumulus_clouds_intensity = 1.0
shader_parameter/_cumulus_clouds_size = 0.5
shader_parameter/_cumulus_clouds_speed = 0.05
shader_parameter/_cumulus_clouds_direction = Vector3(0.25, 0.1, 0.25)
shader_parameter/_cumulus_clouds_texture = ExtResource("5_rt0jr")
shader_parameter/_cumulus_clouds_day_color = Color(0.823529, 0.87451, 1, 1)
shader_parameter/_cumulus_clouds_horizon_light_color = Color(0.98, 0.43, 0.15, 1)
shader_parameter/_cumulus_clouds_night_color = Color(0.090196, 0.094118, 0.129412, 1)
shader_parameter/_cumulus_clouds_partial_mie_phase = Vector3(0.957564, 1.04244, 0.412)
shader_parameter/_cumulus_clouds_mie_intensity = 1.0

[sub_resource type="Sky" id="Sky_0j4pb"]
sky_material = SubResource("ShaderMaterial_v8wrf")

[sub_resource type="Environment" id="Environment_1g8sw"]
background_mode = 2
sky = SubResource("Sky_0j4pb")
ambient_light_source = 3
ambient_light_color = Color(0.79118, 0.714589, 0.676209, 1)
reflected_light_source = 2
tonemap_mode = 3
tonemap_white = 6.0
sdfgi_use_occlusion = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_d0ed4"]

[node name="Main" type="Node3D"]

[node name="PrimitivesCity" parent="." instance=ExtResource("2")]

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(0.0795793, -0.05217, -0.995462, -2.58349e-10, 0.99863, -0.052336, 0.996829, 0.00416486, 0.0794703, -7.677, 2.522, 3.686)
fov = 70.0
far = 8192.0

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
visible = false
update_mode = 1
size = Vector3(2000, 2000, 2000)
cull_mask = 4

[node name="Sky3D" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1g8sw")
camera_attributes = SubResource("CameraAttributesPractical_d0ed4")
script = ExtResource("2_cejat")
enable_editor_time = false
current_time = 8.15683
metadata/_custom_type_script = "uid://deo0gxkmk2ahd"

[node name="SunLight" type="DirectionalLight3D" parent="Sky3D"]
transform = Transform3D(0, -0.653722, 0.756735, 0.797351, 0.456702, 0.394532, -0.603516, 0.603383, 0.521246, 0.756735, 0.394532, 0.521246)
light_color = Color(0.995781, 0.899383, 0.851079, 1)
shadow_enabled = true

[node name="MoonLight" type="DirectionalLight3D" parent="Sky3D"]
transform = Transform3D(0, -0.547827, -0.836592, -0.942621, 0.279307, -0.182899, 0.333863, 0.788589, -0.516394, -0.836592, -0.182899, -0.516394)
light_color = Color(0.572549, 0.776471, 0.956863, 1)
light_energy = 0.0
shadow_enabled = true

[node name="Skydome" type="Node" parent="Sky3D"]
script = ExtResource("4")
tonemap_level = 0.889
exposure = 1.45519e-11
sun_azimuth = -124.559
sun_altitude = -66.7632
moon_azimuth = -301.685
moon_altitude = -100.539
deep_space_euler = Vector3(1.29154, 3.14159, 2.35755)

[node name="TimeOfDay" type="Node" parent="Sky3D"]
script = ExtResource("3")
update_in_editor = false
dome_path = NodePath("../Skydome")
system_sync = false
total_cycle_in_minutes = 15.0
total_hours = 8.15683
day = 1
month = 1
year = 2025
celestials_calculations = 1
compute_moon_coords = true
compute_deep_space_coords = true
latitude = 16.0
longitude = 108.0
utc = 7.0
